// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expand / Show More block saved block HTML shouldn't change 1`] = `
<div
  aria-expanded="false"
  className="wp-block-ugb-expand ugb-expand className"
>
  <div
    className="ugb-expand__less-text"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text</p>",
        }
      }
    />
  </div>
  <div
    className="ugb-expand__more-text"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>moreText</p>",
        }
      }
    />
  </div>
  <a
    className="ugb-expand__toggle"
    href="#"
  >
    <span
      className="ugb-expand__more-toggle-text"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "moreLabel",
          }
        }
      />
    </span>
    <span
      className="ugb-expand__less-toggle-text"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "lessLabel",
          }
        }
      />
    </span>
  </a>
</div>
`;

exports[`Expand / Show More block saved default block HTML shouldn't change 1`] = `
<div
  aria-expanded="false"
  className="wp-block-ugb-expand ugb-expand"
>
  <div
    className="ugb-expand__less-text"
  />
  <div
    className="ugb-expand__more-text"
    style={
      Object {
        "display": "none",
      }
    }
  />
  <a
    className="ugb-expand__toggle"
    href="#"
  >
    <span
      className="ugb-expand__more-toggle-text"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Show more",
          }
        }
      />
    </span>
    <span
      className="ugb-expand__less-toggle-text"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Show less",
          }
        }
      />
    </span>
  </a>
</div>
`;
